fix(upload): markup 'small', whitespace under input field
added some lines in the _tobago.scss so that the input field and the folder button are the same height, therefore removing the whitespace underneath the input

This is for the "small" markup.

Issue: TOBAGO-2522

--- a/tobago-theme/src/main/scss/_tobago.scss
+++ b/tobago-theme/src/main/scss/_tobago.scss
@@ -668,6 +668,13 @@ tobago-file {
   > .input-group, tobago-progress {
     flex: 1 0 0px;
   }
+
+  .input-group {
+    > .form-control-sm ~ .input-group-text {
+      padding: $input-padding-y-sm $input-padding-x-sm;
+      @include font-size($input-font-size-sm);
+    }
+  }
 }
 
 /* flexLayout -------------------------------------------------------------- */
